2004-08-11  JP Rosevear  <jpr@ximian.com>

	Fixes #61555
	
	* gui/dialogs/meeting-page.c (existing_attendee): check if an
	attendee was pre-existing
	(remove_attendee): only add the attendee to the cancel comp if it
	was pre-existing

2004-08-10  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-cal-model.c (e_cal_model_set_search_query): guard against
	re-running the same query.

2004-08-10  Rodrigo Moya <rodrigo@novell.com>

	* gui/alarm-notify/alarm-queue.c (tray_icon_destroyed_cb): disconnect
	from signals also when using only the system tray. Fixes a crash when
	removing an event that had an alarm popup recently.

2004-08-09  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-calendar-view.c: re-added 'Make this occurrence movable' menu
	item, gone by mistake.
	(on_unrecur_appointment): new callback for the new menu item.

2004-08-06  JP Rosevear  <jpr@ximian.com>
 
	Fixes #62452
 	
	* gui/e-itip-control.c (find_my_address): take option to retrieve
	current status as well, actually look for the delegator in the
	list so we can retrieve status there as well
	(show_current_event): use find_my_address to get the status so we
	properly handle not finding the address in the list of attendees
	(show_current): pass extra param
	(ok_clicked_cb): ditto

2004-08-06  JP Rosevear  <jpr@ximian.com>
 
	Fixes #62021
 	
	* gui/dialogs/event-page.c (source_changed_cb): set the default
	timezone
 
	* gui/e-itip-control.c (start_calendar_server): set the default
	timezone
 
	* gui/calendar-component.c (setup_create_ecal): set the default
	timezone, as the component view is not alive and hence has not set
	it

	* gui/tasks-component.c (setup_create_ecal): ditto

2004-08-05  Parthasarathi S A   <sparthasarathi@novell.com>

	Fix for bug #61673.
	* calendar/gui/dialogs/save_comp.c(save_component_dialog):
	  The function takes two arguments now, instead of one. The second
	  argument is the pointer to the ECalComponent from which the component